--- a/#src/---components.html
+++ b/#src/---components.html
@@ -54,6 +54,7 @@
 		<p class="label">Сроки доставки: 1-7 рабочих дней</p>
 		<p class="label label_red">Распродажа</p>
 		<a href="" class="btn-2">Вход</a>
+		<button class="btn-4">Забрать приз</button>
 		<div class="f-aic">
 			<div class="oldPrice mr-8">
 				<svg><use xlink:href="img/sprite/icons-sprite.svg#vector"></use></svg>
@@ -70,6 +71,7 @@
 		</div>
 		<a href="" class="btn-2 btn-2_active">Регистрация</a>
 		<a href="" class="link">обычная ссылка</a>
+		<button class="link-2 darkGray text-footnote">обычная ссылка #2</button>
 		<p class="label-2">Опубликовано: 28.12.2021</p>
 		<div class="js-rating rating" data-rating="3"></div>
 		<div class="inputPlusminus">
