до loading LAZY

--- a/#src/blocks/common/footer.html
+++ b/#src/blocks/common/footer.html
@@ -99,6 +99,7 @@
 				<img src="img/Toplash-logo.svg" alt="" class="logoImage">
 				<div class="panel">
 					<div class="panel__socials nlc-mr-8">
+						<a href="https://www.tiktok.com/@toplashrussia"><svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#tik-tok"/></svg></a>
 						<a href="https://www.instagram.com/toplashrussia/"><svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#instagram"/></svg></a>
 						<a href="https://www.facebook.com/toplashru"><svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#facebook"/></svg></a>
 						<a href="https://vk.com/toplashrussia"><svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#VK"/></svg></a>
