--- a/#src/blocks/common/header.html
+++ b/#src/blocks/common/header.html
@@ -12,7 +12,7 @@
 							<use class="st-active" xlink:href="img/sprite/icons-sprite.svg#close"/>
 						</svg>
 					</button>
-					<img src="img/Toplash-logo.svg" alt="" class="logoImage">
+					<img src="img/Toplash-logo.svg" alt="" class="logoImage mod-inHeader">
 				</div>
 				<div class="nav__content f-aic">
 					<div class="nav__overlayMenu js-overlayMenu"></div>
