--- a/#src/cart.html
+++ b/#src/cart.html
@@ -25,7 +25,7 @@
 								<button class="js-submit-without-validate">
 									<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#minus"></use></svg>
 								</button>
-								<input type="number" name="count" autocomplete="off" name="">
+								<input type="number" name="count" autocomplete="off" value="1">
 								<button class="js-submit-without-validate">
 									<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"></use></svg>
 								</button>
@@ -44,7 +44,7 @@
 				</div>
 				<div class="js-movement-block-to-mob" data-id="1"></div>
 				<div class="js-movement-block-to-desc" data-id="2">
-					<div class="imageComm js-movement-block"><img src="img/cart/comm.png" alt=""></div>
+					<div class="imageComm js-movement-block"><img src="img/cart/comm.jpg" alt=""></div>
 				</div>
 				<div class="f-aic md4-fww">
 					<p>Войдите в свой акаунт, чтобы автоматически заполнить контактные данные</p>
