--- a/#src/private.html
+++ b/#src/private.html
@@ -201,7 +201,7 @@
 						<input type="text" autocomplete="off" name="name" disabled placeholder=" ">
 						<label>toplash.ru/reflink</label>
 					</div>
-					<button class="inputBtn js-copy-text" data-copy-text="toplash.ru/reflink" data-copy-message="Ссылка скопированна">Скопировать</button>
+					<button class="inputBtn js-copy-text" data-copy-text="toplash.ru/reflink" data-copy-message="Ссылка скопирована">Скопировать</button>
 				</div>
 			</div>
 		</div>
@@ -304,7 +304,7 @@
 						<div class="js-validation-block">
 							<div class="inputFile">
 								<input type="file" class="_validate" data-validation-type='["reqImage"]' name="user-image" id="i-user-image" accept="image/jpeg,image/png">
-								<label for="i-user-image" class="btnSec w-100">Изменить фотографию</label>
+								<label for="i-user-image" class="btnSec w-100 js-image-downloader" data-text-change="Изменить скриншот">Загрузить скриншот</label>
 							</div>
 							<p class="js-validation-error mt-4 error" id="image-file-error"></p>
 						</div>
