--- a/#src/product-check.html
+++ b/#src/product-check.html
@@ -28,7 +28,8 @@
 								</div>
 								<button class="inputBtn">Проверить</button>
 							</div>
-							<p class="green mt-8">Здесь можно выводить результат, товар подленный зеленым, если нет или ошибка, красным.</p>
+							<p class="green mt-8">Здесь можно выводить результат, если товар подленный - зеленым</p>
+							<p class="red mt-8">если нет или ошибка, красным.</p>
 						</div>
 					</div>
 					<div class="bottomLil">
@@ -47,7 +48,7 @@
 	<div class="main-p-32-16 container lottery">
 		<div class="card-v1 mod-md-p-16">
 			<div class="f-jcc-aic">
-				<svg class="lottery__svg"><use xlink:href="img/sprite/fill-sprite.svg#gift"></use></svg>
+				<img class="lottery__svg" src="img/sprite/fill-sprite.svg#gift" alt="">
 			</div>
 			<p class="text-huge">Лотерея от Топлаш</p>
 			<p class="text-big darkGray mb-16">Узнайте, возможно вы уже победили!</p>
