--- a/#src/warranty.html
+++ b/#src/warranty.html
@@ -14,7 +14,7 @@
 						<p class="text-huge">Как оформить возврат?</p>
 						<p>Достаточно заполнить форму, кликнув по кнопке ниже, отправить нам продукцию и, как только мы получим товар, сразу же вернём вам деньги на указанную карту.</p>
 						<p>Подробную информацию по заказу вы можете найти в <a href="" class="link">личном кабинете.</a></p>
-						<button class="btn">Заполнить форму возврата</button>
+						<a class="btn" href="https://forms.yandex.ru/u/6096aaf7426d77e5d39340e4/">Заполнить форму возврата</a>
 					</div>
 					<div class="warrantyWork__image">
 						<img src="img/guarantee/08.jpg" alt="">
