--- a/#src/blocks/productPage/product.html
+++ b/#src/blocks/productPage/product.html
@@ -148,8 +148,11 @@
 								<label for="countProduct-2" class="switch__label">
 									<span class="text-big">2 шт.</span>
 									<span class="text-footnote">Хватит на 6 месяцев</span>
-									<span class="discountedItem">
-										<span class="text-footnote mr-4">2 290 ₽</span>
+									<span>
+										<span class="oldPrice mr-4">
+											<svg><use xlink:href="img/sprite/icons-sprite.svg#vector"></use></svg>
+											<span>750 ₽</span>
+										</span>
 										<span class="text-extra-small">2 190 ₽/шт.</span>
 									</span>
 								</label>
@@ -159,8 +162,11 @@
 								<label for="countProduct-3" class="switch__label">
 									<span class="text-big">3 шт.</span>
 									<span class="text-footnote">Хватит на 9 месяцев</span>
-									<span class="discountedItem">
-										<span class="text-footnote mr-4">2 290 ₽</span>
+									<span>
+										<span class="oldPrice mr-4">
+											<svg><use xlink:href="img/sprite/icons-sprite.svg#vector"></use></svg>
+											<span>2 750 ₽</span>
+										</span>
 										<span class="text-extra-small">2 090 ₽/шт.</span>
 									</span>
 								</label>
