--- a/#src/bonus-program.html
+++ b/#src/bonus-program.html
@@ -5,7 +5,7 @@
 })
 <body>
 	@@include('blocks/common/header.html')
-	<div class="result21">
+	<div class="result21 mod-v2">
 		<div class="container">
 			<div class="result21__row">
 				<div class="result21__col">
