--- a/#src/info.html
+++ b/#src/info.html
@@ -24,12 +24,13 @@
 							<p class="text-footnote">Подводка и штамп для стрелок</p>
 						</div>
 						<div class="cartProduct__col mod-col-3">
-							<div class="inputPlusminus">
-								<button class="js-submit-without-validate">
+							<div class="inputPlusminus disabled">
+								<!-- Тут кнопки не кликабельные -->
+								<button type="button">
 									<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#minus"></use></svg>
 								</button>
-								<input type="number" name="count" autocomplete="off" name="">
-								<button class="js-submit-without-validate">
+								<input type="number" name="count" autocomplete="off" value="1">
+								<button type="button">
 									<svg class="w24"><use xlink:href="img/sprite/icons-sprite.svg#plus"></use></svg>
 								</button>
 							</div>
